stylesheet.less
// -----------------------------
// Imports
// -----------------------------

@import "@{templateCommon}/basekit-bootstrap.less";
@import "@{templateLocal}/css/widgets.less";
@import "@{templateLocal}/css/ecommerce.less";
@import "@{templateLocal}/css/layout-header.less";

// -----------------------------
// Page Settings
// -----------------------------


// Wrapper 

.page-wrap {
	max-width: 1200px;
	margin: 0 auto;
	width: 90%;
}

.mainzone {
	padding: 20px 0px;
}

ul, li {
	margin: 0;
}

h1 {
	@media @mobile {
		font-size: (@font-swatch1-font-size * 0.7);
		line-height: (@font-swatch1-line-height * 0.7); 
	}
}

h2 {
	@media @mobile {
		font-size: (@font-swatch2-font-size * 0.8);
		line-height: (@font-swatch2-line-height * 0.8); 
	}
}

h3 {
	@media @mobile {
		font-size: (@font-swatch3-font-size * 0.9);
		line-height: (@font-swatch3-line-height * 0.9); 
	}
}


blockquote {
	background-color: fade(@color-swatch3, 5%);
	border-left: 1px solid fade(@color-swatch2, 50%);
	font-style: italic;
	font-size: large;
	&:before {
		display: none;
	}
}

// ------------------------------------------
// #Default page sticky footer
// ------------------------------------------

.bk-default {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;    
	min-height: 100vh;
	flex-direction: column;
	 -webkit-flex-direction: column;
	-ms-flex-direction: column;
}

.bk-default .page-wrap {
	flex: 1;
	-webkit-box-flex: 1;
	-moz-box-flex: 1;
	-webkit-flex: 1 1 auto;
	-ms-flex: 1 1 auto;
	flex: 1 1 auto;
}

// -----------------------------
// Header
// -----------------------------


header.bk-header {
	/*background-image: image('/images/header.png');
	background-repeat: repeat;
	background-size: cover;
	background-position: center center; */
	background-color: @color-swatch4;
	height: 200px;
	position: relative;
	
	@media @tablet {
		height: auto;
	}
}

.companyheader {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	z-index: 9999;
	
	@media @tablet {
	    position: relative;
	}
}

.slider-header {
	position: absolute;
	top: 0;
    bottom: 0;
    left: 0;
    right: 0;
	overflow: hidden;
	height: 100%;
	z-index: 0;
	
	.widget.responsiveslideshow {
	    min-height: auto;
	    position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
	    
		.slideshow-widget, .slideshow-image-list {
			min-height: 200px;
			height: 200px;
			
			@media @tablet {
			    height: 100%;
			    min-height: auto;
                position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                right: 0;
			}
			
			.crop span.inner {
				background-size: cover;
			}
		}
	}
}

/* COMPANY NAME */

.widget.companyname {
	display: block;
}

.companyname a:hover {
	text-decoration: none;
}

.widget.companyname a {
	padding: 0;
	font-weight: @font-swatch10-font-weight;
	@media @mobile {
		line-height: bkscale(@font-swatch10-line-height, 0.8);
	}
}

.header-left {
	width: 70%;
		@media @tablet {
		width: 100%;
		text-align: center;
	}
}


.header-right .widget.profile span,
.header-right .widget.profile, 
.header-right .widget.profile a, 
.header-right .widget.profile p {
	float: right;
	color: @font-swatch10-color;
	@media @tablet {
		float: none!important;
	}
}  

.header-right {
	width: 30%;
	@media @tablet {
		width: 100%;
		text-align: center;
		float: none;
	}
}  

/* LOGO */

.widget.logo {
	display: block;
	margin-right: 2px;
	@media @tablet {
		width: 100%;
		text-align: center;
	}
}

.widget {
	&.logo, &.companyname {
		display: inline-block;
		vertical-align: middle;
	}
}

// -----------------------------
// Extended Navigation
// -----------------------------


.nav-container {
	background-color: @color-swatch3;
}

.nav-container .widget.profile {
	float: right;
	@media @tablet {
		float: none;
		text-align: center;
	}
}

.nav-column-one {
	display: inline-block;
	vertical-align: middle;
	width: 75%;
	
	@media @tablet {
		width: 100%;
		min-height: 45px;
		float: left;
	}
}

.nav-column-two {
	display: inline-block;
	width: 24%;
	padding-top: 5px;
	text-align: right;
	vertical-align: middle;
	
	@media @tablet {
	    display: block;
		width: 100%;
	}
}

.nav-column-two .map {
	margin-bottom: 5px;
}

/* Navigation */

.extendednavigation {
	position: relative;
}

/* Navbar Menu Mobile */

.nav-container .widget .extendednavigation a.pull,
.nav-container .widget .navigation a.pull {
	@media only screen and (max-width: 769px) {
		position: absolute;
		margin: 13px 0;
		height: 17px;
		top: 0;
	}
}

/* .navbar {
	background-color:@color-swatch1;
	padding: 10px 0px;
} */

.nav-column-two .widget.profile span,
.nav-column-two .widget.profile,
.nav-column-two .widget.profile a,
.nav-column-two .widget.profile p, {
	color:@font-swatch9-color;
	font-weight:@font-swatch4-font-weight;
	@media @tablet {
		float: none!important;
		text-align: center;
	}
}

.nav-column-two .widget.profile form button {
	color:@font-swatch9-color;
}

.nav-column-two .bk-profile-address p {
	@media @tablet {
		float: none!important;
	}
}

.widget .extendednavigation ul {
	@media @tablet {
		 padding-top: 50px;
	}
	li {
		padding: 0;
		border-bottom: 0;
	}
}

.widget .extendednavigation ul li a span.text {
	@media @tablet {
		padding: 0;
		border: 0;
	}
}

.widget .extendednavigation ul li.folder {
	margin: 0;
}

.widget .extendednavigation ul li.folder ul li a span.text {
	padding-right: 0px;
}

.widget .extendednavigation ul li.folder:after {
  border-top-color: @font-swatch6-color;
}

.widget .extendednavigation > ul > li > a,
.widget .extendednavigation ul li.folder > .text {
	padding: 13px 25px 10px;
}

.widget .extendednavigation ul li.folder > .text {
    padding: 13px 40px 10px 25px;
}

.widget .extendednavigation ul.align-center li.folder > .text {
    @media @tablet {
		padding: 13px 40px 10px 40px;
    }
}

.widget .extendednavigation ul li.folder:after {
	top: 48%;
}
/* ... */

